NormalVersionWithLogger/src/main/java/com/example/rabam/error/PackageSavedException.java
package com.example.rabam.error;

public class PackageSavedException extends RuntimeException{
    public PackageSavedException() {
        super("Packet didn't save!");
    }
}
